[project]
name = "leetcode-hero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==6.0.0",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "attrs==25.4.0",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "distro==1.9.0",
    "docutils==0.22.4",
    "duckdb==1.4.3",
    "fastjsonschema==2.21.2",
    "google-auth==2.45.0",
    "google-genai==1.56.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "inquirerpy==0.3.4",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-core==5.9.1",
    "librt==0.7.5",
    "loro==1.10.3",
    "marimo==0.18.4",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "msgspec==0.20.0",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "narwhals==2.14.0",
    "nbformat==5.10.4",
    "numpy==2.4.0",
    "openai==2.14.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pathspec==0.12.1",
    "pfzy==0.3.4",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.0",
    "pyarrow==22.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pymdown-extensions==10.19.1",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "ruff==0.14.10",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlglot==28.5.0",
    "sqlglotrs==0.10.0",
    "starlette==0.50.0",
    "tdqm==0.0.1",
    "tenacity==9.1.2",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "uvicorn==0.40.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
]
